apps/inventory-app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app-frontend
  namespace: inventory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app-frontend
  template:
    metadata:
      labels:
        app: inventory-app-frontend
    spec:
      containers:
        - name: inventory-app-frontend
          image: <usuario>/pulpo-inventory-app-frontend:v0.1.0 # {"$imagepolicy": "inventory-app:inventory-app-frontend"}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
