apps/inventory-app/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inventory-app-route
  namespace: inventory-app
spec:
  parentRefs:
    - name: apisix
      namespace: ingress-apisix
  hostnames:
    - inventory-app.192.168.56.210.nip.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: inventory-app-backend
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: ""
      backendRefs:
        - name: inventory-app-backend
          port: 3000

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: inventory-app-frontend
          port: 80
